--- a/PastaFontes/Readme
+++ b/PastaFontes/Readme
@@ -1,1 +1,1 @@
-Esta pasta deve conter os arquivos fontes.
+Guarde nesta pasta somente fontes de aplicação (arquivos produzidos em um editor de linguagem de programação de computador).
